--- a/FamilyVaultCicd/lib/webhooktrigger/lambda/package.json
+++ b/FamilyVaultCicd/lib/webhooktrigger/lambda/package.json
@@ -12,5 +12,8 @@
   "dependencies": {
     "@aws-sdk/client-codepipeline": "^3.569.0",
     "@aws-sdk/client-secrets-manager": "^3.569.0"
+  },
+  "devDependencies": {
+    "@types/aws-lambda": "^8.10.137"
   }
 }
