--- a/FamilyVaultCicd/package.json
+++ b/FamilyVaultCicd/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "install:all": "npm ci && npm ci --prefix lib/webhooktrigger/lambda"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
