--- a/FamilyVaultCicd/package.json
+++ b/FamilyVaultCicd/package.json
@@ -19,6 +19,7 @@
     "aws-cdk": "2.128.0",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
+    "prettier": "^3.2.5",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "~5.3.3",
