--- a/FamilyVaultCicd/package.json
+++ b/FamilyVaultCicd/package.json
@@ -10,7 +10,8 @@
     "test": "jest",
     "cdk": "cdk",
     "install:all": "npm ci && npm ci --prefix lib/webhooktrigger/lambda",
-    "lint": "eslint 'lib/**/*.ts'"
+    "lint": "eslint 'lib/**/*.ts'",
+    "prettier": "prettier 'lib/**/*.ts'"
   },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
