--- a/FamilyVaultCicd/package.json
+++ b/FamilyVaultCicd/package.json
@@ -10,8 +10,8 @@
     "test": "jest",
     "cdk": "cdk",
     "install:all": "npm ci && npm ci --prefix lib/webhooktrigger/lambda",
-    "lint": "eslint 'lib/**/*.ts'",
-    "prettier": "prettier 'lib/**/*.ts'"
+    "lint": "node ./node_modules/eslint/bin/eslint.js 'lib/**/*.ts'",
+    "prettier": "node ./node_modules/prettier/bin-prettier.js 'lib/**/*.ts'"
   },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
