--- a/FamilyVaultCicd/package.json
+++ b/FamilyVaultCicd/package.json
@@ -11,7 +11,7 @@
     "cdk": "cdk",
     "install:all": "npm ci && npm ci --prefix lib/webhooktrigger/lambda",
     "lint": "node ./node_modules/eslint/bin/eslint.js 'lib/**/*.ts'",
-    "prettier": "node ./node_modules/prettier/bin-prettier.js 'lib/**/*.ts'"
+    "prettier": "node ./node_modules/.bin/prettier 'lib/**/*.ts'"
   },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
