--- a/FamilyVaultCicd/package.json
+++ b/FamilyVaultCicd/package.json
@@ -13,7 +13,7 @@
     "lint": "eslint 'lib/**/*.ts'",
     "prettier": "prettier 'lib/**/*.ts'",
     "prettier-write": "prettier --write 'lib/**/*.ts'",
-    "prettier-cicd": "prettier --config ./path/to/your/.prettierrc 'lib/**/*.ts'",
+    "prettier-cicd": "node ./node_modules/prettier/bin/prettier.cjs 'lib/**/*.ts'",
     "lint-cicd": "node ./node_modules/eslint/bin/eslint.js 'lib/**/*.ts'"
   },
   "devDependencies": {
