--- a/FamilyVaultCicd/package.json
+++ b/FamilyVaultCicd/package.json
@@ -13,9 +13,9 @@
     "lint": "eslint 'lib/**/*.ts'",
     "prettier": "prettier 'lib/**/*.ts'",
     "prettier-write": "prettier --write 'lib/**/*.ts'",
-    "prettier-cicd": "node ./node_modules/prettier/bin/prettier.cjs 'lib/**/*.ts'",
-    "lint-cicd": "node ./node_modules/eslint/bin/eslint.js 'lib/**/*.ts'",
-    "deploy-cicd": "node ./node_modules/aws-cdk/bin/cdk deploy --require-approval never"
+    "prettier-cicd": "node --trace-deprecation ./node_modules/prettier/bin/prettier.cjs 'lib/**/*.ts'",
+    "lint-cicd": "node --trace-deprecation  ./node_modules/eslint/bin/eslint.js 'lib/**/*.ts'",
+    "deploy-cicd": "node --trace-deprecation ./node_modules/aws-cdk/bin/cdk deploy --require-approval never"
   },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
