--- a/.github/workflows/secrets-scan.yml
+++ b/.github/workflows/secrets-scan.yml
@@ -1,18 +1,17 @@
-name: Secrets Scan
+name: TruffleHog Enterprise scan
 
-on:
-  push:
-    branches:
-      - main
+on: [push, pull_request]
 
 jobs:
-  secret_detection:
+  scanning:
+    name: TruffleHog Enterprise scan
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v2
-
-      - name: TruffleHog Scan
-        uses: trufflesecurity/trufflehog-enterprise@v1
         with:
-          args: "scan --ruleset=gitleaks --since-commit=$GITHUB_SHA"
+          fetch-depth: 0 # fetch all history so multiple commits can be scanned
+      - name: TruffleHog Enterprise scan
+        uses: trufflesecurity/TruffleHog-Enterprise-Github-Action@main
+        with:
+          args: --fail-verified ${{ github.event.repository.default_branch }} HEAD
