--- a/.github/workflows/monorepo-workflow.yml
+++ b/.github/workflows/monorepo-workflow.yml
@@ -27,43 +27,31 @@ jobs:
     needs: trufflehog-scan
     steps:
       - name: Print Event Payload
-        env:
-          GITHUB_EVENT: ${{ toJson(github.event) }}
-        run: echo "GITHUB_EVENT=$GITHUB_EVENT"
+        run: |
+          echo "GITHUB_EVENT_PATH content:"
+          cat $GITHUB_EVENT_PATH
       - name: Print Commits
         run: |
           echo "Printing commit information..."
-          echo "${{ toJson(github.event.commits) }}"
+          jq '.commits' $GITHUB_EVENT_PATH
       - name: Print Added Files
         run: |
           echo "Printing added files..."
-          for commit in "${{ github.event.commits }}"; do
-            for file in $(echo "$commit" | jq -r '.added[]?'); do
-              echo "Added file: $file"
-            done
-          done
+          jq -r '.commits[] | .added[]?' $GITHUB_EVENT_PATH
       - name: Print Modified Files
         run: |
           echo "Printing modified files..."
-          for commit in "${{ github.event.commits }}"; do
-            for file in $(echo "$commit" | jq -r '.modified[]?'); do
-              echo "Modified file: $file"
-            done
-          done
+          jq -r '.commits[] | .modified[]?' $GITHUB_EVENT_PATH
       - name: Print Removed Files
         run: |
           echo "Printing removed files..."
-          for commit in "${{ github.event.commits }}"; do
-            for file in $(echo "$commit" | jq -r '.removed[]?'); do
-              echo "Removed file: $file"
-            done
-          done
+          jq -r '.commits[] | .removed[]?' $GITHUB_EVENT_PATH
 
   cdk-job:
     name: CDK CI/CD
     runs-on: ubuntu-latest
     needs: trufflehog-scan
-    if: ${{ success() && (contains(github.event.head_commit.message, 'FamilyVaultCdk/')) }}
+    if: ${{ success() && contains(join(github.event.commits[*].message, ' '), 'FamilyVaultCdk/') }}
     steps:
       - name: Call CDK API Gateway
         run: |
@@ -77,7 +65,7 @@ jobs:
     name: CICD CI/CD
     runs-on: ubuntu-latest
     needs: trufflehog-scan
-    if: ${{ success() && (contains(github.event.head_commit.message, 'FamilyVaultCicd/')) }}
+    if: ${{ success() && contains(join(github.event.commits[*].message, ' '), 'FamilyVaultCicd/') }}
     steps:
       - name: Call CICD API Gateway
         run: |
@@ -91,7 +79,7 @@ jobs:
     name: React CI/CD
     runs-on: ubuntu-latest
     needs: trufflehog-scan
-    if: ${{ success() && (contains(github.event.head_commit.message, 'FamilyVaultReact/')) }}
+    if: ${{ success() && contains(join(github.event.commits[*].message, ' '), 'FamilyVaultReact/') }}
     steps:
       - name: Call React API Gateway
         run: |
